--- a/pubs.html
+++ b/pubs.html
@@ -1578,7 +1578,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Huang, Ling, Anthony D. Joseph, Blaine Nelson, Benjamin I. P. Rubinstein, and J. D. Tygar. “Adversarial machine learning”. In: <em>Proceedings of the 4th ACM Workshop on Security and Artificial Intelligence</em>. ACM. Oct. 2011, pp. 43-58 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/aisec2011-camera-ready.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2011adversarial.bib', 'bibtex-huang2011adversarial')">BibTeX</a>]</li>
+<li>Huang, Ling, Anthony D. Joseph, Blaine Nelson, Benjamin I. P. Rubinstein, and J. D. Tygar. “Adversarial machine learning”. In: <em>Proceedings of the 4th ACM Workshop on Security and Artificial Intelligence</em>. ACM. Oct. 2011, pp. 43-58 [<a href="papers/aisec2011-camera-ready.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('huang2011adversarial.bib', 'bibtex-huang2011adversarial')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1683,7 +1683,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C. Mitchell, Dawn Song, and Peter L. Bartlett. “A learning-based approach to reactive security”. In: <em>Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security</em>. FC. 2010, pp. 192-206 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/react-short.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barth2010a.bib', 'bibtex-barth2010a')">BibTeX</a>]</li>
+<li>Barth, Adam, Benjamin I. P. Rubinstein, Mukund Sundararajan, John C. Mitchell, Dawn Song, and Peter L. Bartlett. “A learning-based approach to reactive security”. In: <em>Proceedings of the Fourteenth International Conference on Financial Cryptography and Data Security</em>. FC. 2010, pp. 192-206 [<a href="papers/react-short.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barth2010a.bib', 'bibtex-barth2010a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1699,7 +1699,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph, and J. D. Tygar. “Classifier evasion: Models and open problems”. In: <em>International Workshop on Privacy and Security Issues in Data Mining and Machine Learning</em>. PSDML. 2010, pp. 92-98 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/ecml2010.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('nelson2010classifier.bib', 'bibtex-nelson2010classifier')">BibTeX</a>]</li>
+<li>Nelson, Blaine, Benjamin I. P. Rubinstein, Ling Huang, Anthony D. Joseph, and J. D. Tygar. “Classifier evasion: Models and open problems”. In: <em>International Workshop on Privacy and Security Issues in Data Mining and Machine Learning</em>. PSDML. 2010, pp. 92-98 [<a href="papers/ecml2010.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('nelson2010classifier.bib', 'bibtex-nelson2010classifier')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1735,7 +1735,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Ghosh, Arpita, Benjamin I. P. Rubinstein, Sergei Vassilvitskii, and Martin Zinkevich. “Adaptive bidding for display advertising”. In: <em>Proceedings of the 18th International Conference on World Wide Web</em>. WWW. ACM. 2009, pp. 251-260 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/WWW09.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('ghosh2009adaptive.bib', 'bibtex-ghosh2009adaptive')">BibTeX</a>]</li>
+<li>Ghosh, Arpita, Benjamin I. P. Rubinstein, Sergei Vassilvitskii, and Martin Zinkevich. “Adaptive bidding for display advertising”. In: <em>Proceedings of the 18th International Conference on World Wide Web</em>. WWW. ACM. 2009, pp. 251-260 [<a href="papers/WWW09.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('ghosh2009adaptive.bib', 'bibtex-ghosh2009adaptive')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1752,7 +1752,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P., Peter L. Bartlett, and J. Hyam Rubinstein. “Shifting: One-inclusion mistake bounds and sample compression”. In: <em>Journal of Computer and System Sciences</em> 75.1 (2009), pp. 37-59 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/RBR07-JCSS.pdf">PDF</a>; <a href="https://people.eng.unimelb.edu.au/brubinstein/papers/JCSS09-erratum.pdf">corrigendum</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009shifting.bib', 'bibtex-rubinstein2009shifting')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P., Peter L. Bartlett, and J. Hyam Rubinstein. “Shifting: One-inclusion mistake bounds and sample compression”. In: <em>Journal of Computer and System Sciences</em> 75.1 (2009), pp. 37-59 [<a href="papers/RBR07-JCSS.pdf">PDF</a>; <a href="papers/JCSS09-erratum.pdf">corrigendum</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009shifting.bib', 'bibtex-rubinstein2009shifting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1769,7 +1769,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft, and J. D. Tygar. “ANTIDOTE: Understanding and defending against poisoning of anomaly detectors”. In: <em>Proceedings of the 9th ACM SIGCOMM Internet Measurement Conference</em>. IMC. ACM. 2009, pp. 1-14 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/imc206-rubinstein.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009antidote.bib', 'bibtex-rubinstein2009antidote')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft, and J. D. Tygar. “ANTIDOTE: Understanding and defending against poisoning of anomaly detectors”. In: <em>Proceedings of the 9th ACM SIGCOMM Internet Measurement Conference</em>. IMC. ACM. 2009, pp. 1-14 [<a href="papers/imc206-rubinstein.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009antidote.bib', 'bibtex-rubinstein2009antidote')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1787,7 +1787,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft, and J. D. Tygar. “Stealthy poisoning attacks on PCA-based anomaly detectors”. In: <em>ACM SIGMETRICS Performance Evaluation Review</em> 37.2 (2009), pp. 73-74 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLRTT09-SIGMETRICS09.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009stealthy.bib', 'bibtex-rubinstein2009stealthy')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Satish Rao, Nina Taft, and J. D. Tygar. “Stealthy poisoning attacks on PCA-based anomaly detectors”. In: <em>ACM SIGMETRICS Performance Evaluation Review</em> 37.2 (2009), pp. 73-74 [<a href="papers/RNHJLRTT09-SIGMETRICS09.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009stealthy.bib', 'bibtex-rubinstein2009stealthy')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1837,7 +1837,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, J. Hyam and Benjamin I. P. Rubinstein. “Geometric &amp; Topological Representations of Maximum Classes with Applications to Sample Compression”. In: <em>Proceedings of the 21st Annual Conference on Learning Theory</em>. COLT. 2008, pp. 299-310 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/RR08-COLT08.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008geometric.bib', 'bibtex-rubinstein2008geometric')">BibTeX</a>]</li>
+<li>Rubinstein, J. Hyam and Benjamin I. P. Rubinstein. “Geometric &amp; Topological Representations of Maximum Classes with Applications to Sample Compression”. In: <em>Proceedings of the 21st Annual Conference on Learning Theory</em>. COLT. 2008, pp. 299-310 [<a href="papers/RR08-COLT08.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008geometric.bib', 'bibtex-rubinstein2008geometric')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1853,7 +1853,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft, and J. Doug Tygar. “Evading anomaly detection through variance injection attacks on PCA”. In: <em>Proceedings of the 11th International Symposium on Recent Advances in Intrusion Detection</em>. RAID. 2008, pp. 394-395 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/RNHJLTT08-RAID08.pdf">PDF</a>; <span style="color:red">Winner of RAID08 best poster award</span>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008evading.bib', 'bibtex-rubinstein2008evading')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft, and J. Doug Tygar. “Evading anomaly detection through variance injection attacks on PCA”. In: <em>Proceedings of the 11th International Symposium on Recent Advances in Intrusion Detection</em>. RAID. 2008, pp. 394-395 [<a href="papers/RNHJLTT08-RAID08.pdf">PDF</a>; <span style="color:red">Winner of RAID08 best poster award</span>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008evading.bib', 'bibtex-rubinstein2008evading')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1869,7 +1869,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Nelson, Blaine, Marco Barreno, Fuching Jack Chi, Anthony D. Joseph, Benjamin I. P. Rubinstein, Udam Saini, Charles A. Sutton, J. Doug Tygar, and Kai Xia. “Exploiting Machine Learning to Subvert Your Spam Filter.” In: <em>First USENIX Workshop on Large-scale Exploits and Emergent Threats</em>. LEET. 2008, pp. 1-9 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/leet08.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('nelson2008exploiting.bib', 'bibtex-nelson2008exploiting')">BibTeX</a>]</li>
+<li>Nelson, Blaine, Marco Barreno, Fuching Jack Chi, Anthony D. Joseph, Benjamin I. P. Rubinstein, Udam Saini, Charles A. Sutton, J. Doug Tygar, and Kai Xia. “Exploiting Machine Learning to Subvert Your Spam Filter.” In: <em>First USENIX Workshop on Large-scale Exploits and Emergent Threats</em>. LEET. 2008, pp. 1-9 [<a href="papers/leet08.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('nelson2008exploiting.bib', 'bibtex-nelson2008exploiting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1886,7 +1886,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Barreno, Marco, Peter L. Bartlett, Fuching Jack Chi, Anthony D. Joseph, Blaine Nelson, Benjamin I. P. Rubinstein, Udam Saini, and J. Doug Tygar. “Open problems in the security of learning”. In: <em>Proceedings of the 1st ACM Workshop on Artificial Intelligence &amp; Security</em>. AISec. ACM. 2008, pp. 19-26 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/BBCJNRST08-AISEC08.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barreno2008open.bib', 'bibtex-barreno2008open')">BibTeX</a>]</li>
+<li>Barreno, Marco, Peter L. Bartlett, Fuching Jack Chi, Anthony D. Joseph, Blaine Nelson, Benjamin I. P. Rubinstein, Udam Saini, and J. Doug Tygar. “Open problems in the security of learning”. In: <em>Proceedings of the 1st ACM Workshop on Artificial Intelligence &amp; Security</em>. AISec. ACM. 2008, pp. 19-26 [<a href="papers/BBCJNRST08-AISEC08.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('barreno2008open.bib', 'bibtex-barreno2008open')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1973,7 +1973,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Rubinstein, Benjamin I. P., Jon McAuliffe, Simon Cawley, Marimuthu Palaniswami, Kotagiri Ramamohanarao, and Terence P. Speed. “Machine learning in low-level microarray analysis”. In: <em>ACM SIGKDD Explorations Newsletter</em> 5.2 (2003). Special Issue on Microarray Data Mining, pp. 130-139 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/sigkdd03.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2003machine.bib', 'bibtex-rubinstein2003machine')">BibTeX</a>]</li>
+<li>Rubinstein, Benjamin I. P., Jon McAuliffe, Simon Cawley, Marimuthu Palaniswami, Kotagiri Ramamohanarao, and Terence P. Speed. “Machine learning in low-level microarray analysis”. In: <em>ACM SIGKDD Explorations Newsletter</em> 5.2 (2003). Special Issue on Microarray Data Mining, pp. 130-139 [<a href="papers/sigkdd03.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2003machine.bib', 'bibtex-rubinstein2003machine')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
