--- a/group.html
+++ b/group.html
@@ -338,6 +338,7 @@ $(document).ready(function () {
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
+<li>Jiankai Jin. (w Olya Ohrimenko 2021– ). Multi-party machine learning.</li>
 <li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>. (w Olya Ohrimenko 2021– ). Topics in privacy, robustness, adaptive data analysis.</li>
 <li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani 2021– ). Certified robustness.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
