rankings be gone

--- a/impact.html
+++ b/impact.html
@@ -538,9 +538,9 @@ div.tocify {
 <div id="advisory" class="section level3">
 <h3>Advisory</h3>
 <ul>
-<li>Member (2020–), Conference and Journal Ranking Advisory Committee, Computing Research and Education Association of Australasia (CORE).</li>
 <li>Member (2019–), Methodology Advisory Committee, Australian Bureau of Statistics.</li>
 <li>Member (2015–), National Committee for Information and Communication Sciences, the Australian Academy of Science.</li>
+<li>Member (2020–21), Ranking Advisory Committee, Computing Research and Education Association of Australasia (CORE).</li>
 </ul>
 </div>
 <div id="institutional" class="section level3">
