--- a/pubs.html
+++ b/pubs.html
@@ -384,12 +384,14 @@ $(document).ready(function () {
   author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
   journal = {Journal of Computational and Graphical Statistics},
   year = {2021},
-  month = {Feb},
+  pages = {406--421},
+  volume = {30},
+  number = {2},
 }
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Feb. 2021). [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> 30.2 (2021), pp. 406-421 [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
