--- a/pubs.html
+++ b/pubs.html
@@ -455,6 +455,21 @@ $(document).ready(function () {
 <ul>
 <li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-Sun2021strategic">
+@inproceedings{Sun2021strategic,
+  title = {Strategic mitigation against wireless attacks on autonomous platoons},
+  author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  year = {2021},
+  booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  series = {ECML-PKDD},
+}
+</code></pre></div>
+
+<ul>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Joint European Conference on Machine Learning and Knowledge Discovery in Databases</em>. ECML-PKDD. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2020</h3>
