icml19 ebcc code

--- a/pubs.html
+++ b/pubs.html
@@ -684,7 +684,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein, and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. PMLR, 2019, pp. 3886-3895 [<a href="http://proceedings.mlr.press/v97/li19i.html">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein, and Trevor Cohn. “Exploiting Worker Correlation for Label Aggregation in Crowdsourcing”. In: <em>Proceedings of the 36th International Conference on Machine Learning</em>. ICML. PMLR, 2019, pp. 3886-3895 [<a href="http://proceedings.mlr.press/v97/li19i.html">PDF</a>; <a href="https://github.com/yuan-li/truth-inference-at-scale">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019exploiting.bib', 'bibtex-li2019exploiting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
