--- a/pubs.html
+++ b/pubs.html
@@ -352,13 +352,13 @@ $(document).ready(function () {
   author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzm{\a'a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
   booktitle = {Proceedings of the Web Conference 2021},
   series = {WWW},
-  note = {Accepted},
   year = {2021},
+  pages = {3638--3650},
 }
 </code></pre></div>
 
 <ul>
-<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. Accepted. 2021 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. 2021, pp. 3638-3650 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a href="https://dl.acm.org/doi/abs/10.1145/3442381.3450034">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
