--- a/group.html
+++ b/group.html
@@ -354,16 +354,16 @@ $(document).ready(function () {
 <h3>PhD students—Completed</h3>
 <ul>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016–20). Bayesian record linkage, adaptive importance sampling for efficient evaluation → Postdoc at Univ Melbourne</li>
-<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne</li>
+<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne → Digital fraud analyst at ANZ Bank</li>
 <li><a href="https://scholar.google.com/citations?user=qDDC09EAAAAJ&amp;hl=en">Yuan Li</a> (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
-<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
-<li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
-<li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT</li>
-<li><a href="https://www.researchgate.net/profile/Zay_Aye">Zay Aye</a> - CompSci (w Rao Kotagiri 2014–18). Learning distance metrics → Postdoc at Univ Melbourne</li>
+<li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU → Privacy Expert at Alipay, China</li>
+<li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder of NeuroPhyte</li>
+<li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT, China</li>
+<li><a href="https://www.researchgate.net/profile/Zay_Aye">Zay Aye</a> - CompSci (w Rao Kotagiri 2014–18). Learning distance metrics → Postdoc at Univ Melbourne (Infrastructure Engineering)</li>
 <li><a href="https://www.linkedin.com/in/yamuna-kankanige-8b258a26/">Yamuna Kankanige</a> (w James Bailey 2015–18). Predicting liver transplant outcomes with Austin Health → Bioinformatician at Peter MacCallum Cancer Centre</li>
-<li><a href="https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&amp;hl=en">Maryam Fanaeepour</a> - CompSci (w Lars Kulik, Egemen Tanin 2014–17). Location data privacy → Postdoc at Duke University</li>
-<li><a href="https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&amp;hl=en">Jiazhen He</a> - CompSci (w James Bailey, Rui Zhang 2014–17). Education analytics and MOOCs → Postdoc at Univ Melbourne</li>
-<li><a href="https://www.researchgate.net/profile/Zuhe_Zhang">Zuhe Zhang</a> - Maths &amp; Stats (w Sanming Zhou 2014–17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank</li>
+<li><a href="https://scholar.google.com.au/citations?user=1EPDwbAAAAAJ&amp;hl=en">Maryam Fanaeepour</a> - CompSci (w Lars Kulik, Egemen Tanin 2014–17). Location data privacy → Postdoc at Duke University → Researcher at Ghent University</li>
+<li><a href="https://scholar.google.com.au/citations?user=GtpWKiwAAAAJ&amp;hl=en">Jiazhen He</a> - CompSci (w James Bailey, Rui Zhang 2014–17). Education analytics and MOOCs → Postdoc at Univ Melbourne → Postdoc at AstraZeneca</li>
+<li><a href="https://www.researchgate.net/profile/Zuhe_Zhang">Zuhe Zhang</a> - Maths &amp; Stats (w Sanming Zhou 2014–17). Differential privacy in Bayesian statistics → Data Scientist at ANZ Bank → Data Scientist at Melbourne Business School</li>
 </ul>
 </div>
 <div id="other-alumni" class="section level3">
