--- a/pubs.html
+++ b/pubs.html
@@ -418,12 +418,12 @@ $(document).ready(function () {
   booktitle = {Proceedings of the 35th AAAI Conference on Artificial Intelligence},
   series = {AAAI},
   year = {2021},
-  note = {In press},
+  pages = {11682--11690},
 }
 </code></pre></div>
 
 <ul>
-<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. In press. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
+<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. 2021, pp. 11682-11690 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a href="https://ojs.aaai.org/index.php/AAAI/article/view/17389">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
