Public access AoAS preprint due to DoD funding

--- a/pubs.html
+++ b/pubs.html
@@ -523,7 +523,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
+<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="papers/aoas_v3.pdf">PDF</a>; <a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
