easy as on arxiv

--- a/pubs.html
+++ b/pubs.html
@@ -453,7 +453,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a href="https://github.com/JunW15/NumberTest">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a href="https://arxiv.org/abs/2107.08357">full</a>; <a href="https://github.com/JunW15/NumberTest">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
