--- a/pubs.html
+++ b/pubs.html
@@ -457,6 +457,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-Sun2021A">
+@inproceedings{Sun2021A,
+  title = {A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
+  author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  year = {2021},
+  booktitle = {2021 IEEE 60th Conference on Decision and Control},
+  series = {CDC},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 IEEE 60th Conference on Decision and Control</em>. CDC. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-Sun2021strategic">
 @inproceedings{Sun2021strategic,
   title = {Strategic mitigation against wireless attacks on autonomous platoons},
@@ -464,11 +480,12 @@ $(document).ready(function () {
   year = {2021},
   booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
   series = {ECML-PKDD},
+  note = {Accepted},
 }
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Joint European Conference on Machine Learning and Knowledge Discovery in Databases</em>. ECML-PKDD. 2021 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Joint European Conference on Machine Learning and Knowledge Discovery in Databases</em>. ECML-PKDD. Accepted. 2021 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
