--- a/pubs.html
+++ b/pubs.html
@@ -487,6 +487,22 @@ $(document).ready(function () {
 <ul>
 <li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Joint European Conference on Machine Learning and Knowledge Discovery in Databases</em>. ECML-PKDD. Accepted. 2021 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-pham2021towards">
+@inproceedings{pham2021towards,
+  title = {Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing},
+  author = {Van-Thuan Pham and Manh-Dung Nguyen and Quang-Trung Ta and Toby Murray and Benjamin I. P. Rubinstein},
+  year = {2021},
+  booktitle = {Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering},
+  series = {ASE},
+  note = {New Ideas and Emerging Results (NIER) track},
+}
+</code></pre></div>
+
+<ul>
+<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2020</h3>
