software, pages updates

--- a/pubs.html
+++ b/pubs.html
@@ -399,15 +399,15 @@ $(document).ready(function () {
 @inproceedings{weerasinghe2021closing,
   title = {Closing the {BIG-LID}: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning},
   author = {Sandamal Weerasinghe and Benjamin I. P. Rubinstein and Tansu Alpcan and Sarah Erfani and Christopher Leckie and Tamas Abraham},
-  booktitle = {The 30th International Joint Conference on Artificial Intelligence},
+  booktitle = {Proceedings of the Thirtieth International Joint Conference on Artificial Intelligence},
   series = {IJCAI},
   year = {2021},
-  note = {In press},
+  pages = {3176--3184},
 }
 </code></pre></div>
 
 <ul>
-<li>Weerasinghe, Sandamal, Benjamin I. P. Rubinstein, Tansu Alpcan, Sarah Erfani, Christopher Leckie, and Tamas Abraham. “Closing the BIG-LID: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning”. In: <em>The 30th International Joint Conference on Artificial Intelligence</em>. IJCAI. In press. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('weerasinghe2021closing.bib', 'bibtex-weerasinghe2021closing')">BibTeX</a>]</li>
+<li>Weerasinghe, Sandamal, Benjamin I. P. Rubinstein, Tansu Alpcan, Sarah Erfani, Christopher Leckie, and Tamas Abraham. “Closing the BIG-LID: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning”. In: <em>Proceedings of the Thirtieth International Joint Conference on Artificial Intelligence</em>. IJCAI. 2021, pp. 3176-3184 [<a href="https://www.ijcai.org/proceedings/2021/0437.pdf">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('weerasinghe2021closing.bib', 'bibtex-weerasinghe2021closing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -501,7 +501,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
+<li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">software</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
