--- a/group.html
+++ b/group.html
@@ -329,9 +329,7 @@ $(document).ready(function () {
 <h3>Postdocs</h3>
 <ul>
 <li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ). Machine learning in privacy and databases.</li>
-<li><a href="https://changxu.io/">Chang Xu</a> (w Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (2019– ). Certified robustness.</li>
-<li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (w Leckie, Erfani, Alpcan 2019– ). Adversarial machine learning.</li>
 <li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
 </ul>
 </div>
@@ -369,6 +367,8 @@ $(document).ready(function () {
 <div id="other-alumni" class="section level3">
 <h3>Other Alumni</h3>
 <ul>
+<li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning.</li>
+<li><a href="https://changxu.io/">Chang Xu</a> (postdoc 2020–21). Adversarial learning for NLP → Data Scientist, News Corp, Sydney.</li>
 <li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (postdoc 2018–19). Adversarial machine learning → Associate, Alan Turing Institute</li>
 <li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (postdoc 2016–19). Adversarial reinforcement learning → Postdoc at Melbourne</li>
 <li><a href="https://scholar.google.com/citations?user=TpErHPkAAAAJ&amp;hl=en">Shen Wang</a> (postdoc 2016–18). Probabilistic programming, databases, record linkage.</li>
