--- a/pubs.html
+++ b/pubs.html
@@ -503,6 +503,21 @@ $(document).ready(function () {
 <ul>
 <li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">software</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-perera2021nodba">
+@misc{perera2021nodba,
+  title = {No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees},
+  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {arXiv:2108.10130 [cs.DB]},
+  year = {2021},
+  month = {Aug},
+}
+</code></pre></div>
+
+<ul>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>No DBA? No regret! Multi-armed bandits for index tuning of analytical and HTAP workloads with provable guarantees</em>. arXiv:2108.10130 [cs.DB]. Aug. 2021 [<a href="https://arxiv.org/abs/2108.10130">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2021nodba.bib', 'bibtex-perera2021nodba')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2020</h3>
