--- a/pubs.html
+++ b/pubs.html
@@ -427,6 +427,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-Sun2021A">
+@inproceedings{Sun2021A,
+  title = {A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
+  author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
+  year = {2021},
+  booktitle = {2021 IEEE 60th Conference on Decision and Control},
+  series = {CDC},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 IEEE 60th Conference on Decision and Control</em>. CDC. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-wang2021putting">
 @inproceedings{wang2021putting,
   title = {Putting words into the system's mouth: A targeted attack on neural machine translation using monolingual data poisoning},
@@ -454,22 +470,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a href="https://arxiv.org/abs/2107.08357">full</a>; <a href="https://github.com/JunW15/NumberTest">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-Sun2021A">
-@inproceedings{Sun2021A,
-  title = {A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
-  author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
-  year = {2021},
-  booktitle = {2021 IEEE 60th Conference on Decision and Control},
-  series = {CDC},
-  note = {Accepted},
-}
-</code></pre></div>
-
-<ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons”. In: <em>2021 IEEE 60th Conference on Decision and Control</em>. CDC. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('Sun2021A.bib', 'bibtex-Sun2021A')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -502,6 +502,21 @@ $(document).ready(function () {
 
 <ul>
 <li>Pham, Van-Thuan, Manh-Dung Nguyen, Quang-Trung Ta, Toby Murray, and Benjamin I. P. Rubinstein. “Towards Systematic and Dynamic Task Allocation for Collaborative Parallel Fuzzing”. In: <em>Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. New Ideas and Emerging Results (NIER) track. 2021 [<a href="https://github.com/MelbourneFuzzingHub/aflteam?s=09">software</a>; <a href="https://thuanpv.github.io/publications/AFLTeam-ASE21-NIER.pdf">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('pham2021towards.bib', 'bibtex-pham2021towards')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-xu2021mitigating">
+@inproceedings{xu2021mitigating,
+  title = {Mitigating Data Poisoning in Text Classification with Differential Privacy},
+  author = {Chang Xu and Jun Wang and Francisco Guzm{\a'a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2021},
+  booktitle = {Findings of EMNLP},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Xu, Chang, Jun Wang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “Mitigating Data Poisoning in Text Classification with Differential Privacy”. In: <em>Findings of EMNLP</em>. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('xu2021mitigating.bib', 'bibtex-xu2021mitigating')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
