--- a/pubs.html
+++ b/pubs.html
@@ -427,6 +427,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-oetomo2021cutting">
+@inproceedings{oetomo2021cutting,
+  title = {Cutting to the Chase with Warm-Start Contextual Bandits},
+  author = {Bastian Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  year = {2021},
+  series = {ICDM},
+  booktitle = {2021 IEEE 21th International Conference on Data Mining},
+}
+</code></pre></div>
+
+<ul>
+<li>Oetomo, Bastian, R. Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. “Cutting to the Chase with Warm-Start Contextual Bandits”. In: <em>2021 IEEE 21th International Conference on Data Mining</em>. ICDM. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('oetomo2021cutting.bib', 'bibtex-oetomo2021cutting')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-Sun2021A">
 @inproceedings{Sun2021A,
   title = {A Communication Security Game on Switched Systems for Autonomous Vehicle Platoons},
