--- a/pubs.html
+++ b/pubs.html
@@ -337,12 +337,12 @@ $(document).ready(function () {
   booktitle = {Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
   series = {KDD},
   year = {2021},
-  note = {Accepted},
+  pages = {1180--1190},
 }
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining</em>. KDD. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a href="https://github.com/ngmarchant/activeeval">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining</em>. KDD. 2021, pp. 1180-1190 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a href="https://dl.acm.org/doi/10.1145/3447548.3467435">publisher link</a>; <a href="https://github.com/ngmarchant/activeeval">software</a>; <a href="https://dl.acm.org/doi/10.1145/3447548.3467435#video_stream_uuid%3Aeff6337b-7642-4147-a135-8d0dac98bbce">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
