--- a/pubs.html
+++ b/pubs.html
@@ -358,7 +358,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. 2021, pp. 3638-3650 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a href="https://dl.acm.org/doi/abs/10.1145/3442381.3450034">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. 2021, pp. 3638-3650 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a href="https://dl.acm.org/doi/abs/10.1145/3442381.3450034">publisher link</a>; <a href="https://www.youtube.com/watch?v=PDt5Dgxe2y0">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
