icde vid update

--- a/pubs.html
+++ b/pubs.html
@@ -374,7 +374,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “DBA bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees”. In: <em>2021 IEEE 37th International Conference on Data Engineering</em>. ICDE. 2021, pp. 600-611 [<a href="https://arxiv.org/abs/2010.09208">full</a>; <a href="https://ieeexplore.ieee.org/abstract/document/9458699">publisher link</a>; <a href="https://youtu.be/wjD9RnrBhDY">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2020.bib', 'bibtex-perera2020')">BibTeX</a>]</li>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “DBA bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees”. In: <em>2021 IEEE 37th International Conference on Data Engineering</em>. ICDE. 2021, pp. 600-611 [<a href="https://arxiv.org/abs/2010.09208">full</a>; <a href="https://ieeexplore.ieee.org/abstract/document/9458699">publisher link</a>; <a href="https://youtu.be/7PohjU29Hjk">video</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2020.bib', 'bibtex-perera2020')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
