acl, ecml pub'd

--- a/pubs.html
+++ b/pubs.html
@@ -463,13 +463,13 @@ $(document).ready(function () {
   title = {Putting words into the system's mouth: A targeted attack on neural machine translation using monolingual data poisoning},
   author = {Jun Wang and Chang Xu and Francisco Guzm{\a'a}n and Ahmed El-Kishky and Yuqing Tang and Benjamin I. P. Rubinstein and Trevor Cohn},
   year = {2021},
-  booktitle = {Findings of ACL},
-  note = {Accepted},
+  booktitle = {Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021},
+  pages = {1463--1473},
 }
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a href="https://arxiv.org/abs/2107.05243">full</a>; <a href="https://github.com/JunW15/Monolingual-Attack">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021</em>. 2021, pp. 1463-1473 [<a href="https://arxiv.org/abs/2107.05243">full</a>; <a href="https://github.com/JunW15/Monolingual-Attack">software</a>; <a href="https://aclanthology.org/2021.findings-acl.127">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -478,13 +478,13 @@ $(document).ready(function () {
   title = {As Easy as 1, 2, 3: Behavioural Testing of {NMT} Systems for Numerical Translation},
   author = {Jun Wang and Chang Xu and Francisco Guzm{\a'a}n and Ahmed El-Kishky and Yuqing Tang and Benjamin I. P. Rubinstein and Trevor Cohn},
   year = {2021},
-  booktitle = {Findings of ACL},
-  note = {Accepted},
+  booktitle = {Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021},
+  pages = {4711--4717},
 }
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a href="https://arxiv.org/abs/2107.08357">full</a>; <a href="https://github.com/JunW15/NumberTest">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of the Association for Computational Linguistics: ACL-IJCNLP 2021</em>. 2021, pp. 4711-4717 [<a href="https://arxiv.org/abs/2107.08357">full</a>; <a href="https://github.com/JunW15/NumberTest">software</a>; <a href="https://aclanthology.org/2021.findings-acl.415">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -493,14 +493,14 @@ $(document).ready(function () {
   title = {Strategic mitigation against wireless attacks on autonomous platoons},
   author = {Guoxin Sun and Tansu Alpcan and Benjamin I. P. Rubinstein and Seyit Camtepe},
   year = {2021},
-  booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  booktitle = {Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track},
   series = {ECML-PKDD},
-  note = {Accepted},
+  pages = {69--84},
 }
 </code></pre></div>
 
 <ul>
-<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Joint European Conference on Machine Learning and Knowledge Discovery in Databases</em>. ECML-PKDD. Accepted. 2021 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
+<li>Sun, Guoxin, Tansu Alpcan, Benjamin I. P. Rubinstein, and Seyit Camtepe. “Strategic mitigation against wireless attacks on autonomous platoons”. In: <em>Machine Learning and Knowledge Discovery in Databases: Applied Data Science Track</em>. ECML-PKDD. 2021, pp. 69-84 [<a href="https://garrisonsun.github.io/End-to-end-atttack-detection-and-mitigation-framework/">software</a>; <a href="https://link.springer.com/chapter/10.1007/978-3-030-86514-6_5">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Sun2021strategic.bib', 'bibtex-Sun2021strategic')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
