--- a/group.html
+++ b/group.html
@@ -341,7 +341,6 @@ $(document).ready(function () {
 <li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani 2021– ). Certified robustness.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Distributed adversarial learning.</li>
-<li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (2019– ). Robustness in machine learning.</li>
 <li>Ruihan Zhang (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
@@ -368,6 +367,7 @@ $(document).ready(function () {
 <h3>Other Alumni</h3>
 <ul>
 <li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning.</li>
+<li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (student 2019–21). Robustness in machine learning.</li>
 <li><a href="https://changxu.io/">Chang Xu</a> (postdoc 2020–21). Adversarial learning for NLP → Data Scientist, News Corp, Sydney.</li>
 <li><a href="https://tlienart.github.io/">Thibaut Lienart</a> (postdoc 2018–19). Adversarial machine learning → Associate, Alan Turing Institute</li>
 <li><a href="https://scholar.google.com/citations?user=e_mtK4kAAAAJ&amp;hl=en">Yi Han</a> (postdoc 2016–19). Adversarial reinforcement learning → Postdoc at Melbourne</li>
